--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -395,10 +395,8 @@
     <string name="settings_eh_detail_size_long">長</string>
     <string name="settings_eh_detail_size_short">短</string>
     <string name="settings_eh_list_tile_thumb_size">詳情模式下縮略圖大小</string>
-    <string name="settings_eh_thumb_size">縮略圖大小</string>
-    <string name="settings_eh_thumb_size_large">大</string>
-    <string name="settings_eh_thumb_size_middle">中</string>
-    <string name="settings_eh_thumb_size_small">小</string>
+    <string name="settings_eh_thumb_size">縮略圖模式下縮略圖大小</string>
+    <string name="settings_eh_thumb_size_summary">以及畫廊詳情頁預覽圖大小</string>
     <string name="settings_eh_thumb_resolution">縮略圖分辨率</string>
     <string name="settings_eh_thumb_resolution_summary">%s，指定分辨率可能使獲取縮略圖失敗</string>
     <string name="settings_eh_thumb_resolution_auto">自動</string>
@@ -413,6 +411,7 @@
     <string name="settings_eh_tag_translations_source">補充翻譯（由 EhTagTranslation 提供）</string>
     <string name="settings_eh_tag_translations_source_url">https://github.com/EhTagTranslation/Editor/wiki</string>
     <string name="settings_eh_preview_num">畫廊詳情頁預覽圖最大數量</string>
+    <string name="settings_eh_preview_num_summary">由於歷史因素，此值過大會導致卡頓</string>
     <string name="settings_eh_filter">屏蔽畫廊</string>
     <string name="settings_eh_filter_summary">根據標題、上傳者、標籤屏蔽畫廊</string>
     <string name="settings_eh_request_news">啟動時請求新聞頁面</string>
@@ -643,4 +642,9 @@
     <string name="app_link_not_verified_message">對於 Android 12 及更新的版本，您需要手動添加連結到已驗證連結才能在 EhViewer 中打開 E-Hentai 連結。</string>
     <string name="app_link_not_verified_title">應用連結未驗證</string>
     <string name="open_by_default">默認打開</string>
+
+    <string name="archive_passwd">歸檔文件密碼</string>
+    <string name="archive_need_passwd">歸檔文件需要密碼</string>
+    <string name="passwd_wrong">密碼錯誤</string>
+    <string name="passwd_cannot_be_empty">密碼不能為空</string>
 </resources>
