--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -77,7 +77,7 @@
     <string name="app_waring">Le contenu de l\'application provient de l\'Internet, dont quelque chose peut vous causer le dommage physique ou mentale. Vous l\'avez bien compris et voulez continuer quand même.</string>
     <string name="error_username_cannot_empty">Nom d\'ultilisateur ne doit pas être une chaîne vide</string>
     <string name="error_password_cannot_empty">Mot de passe ne doit pas être une chaîne vide</string>
-    <string name="skip_signing_in">Continuer sans se connecter</string>
+    <string name="tourist_mode">Continuer sans se connecter</string>
     <string name="sign_in_failed">Impossible de se connecter</string>
     <string name="press_twice_exit">Appuyez encore une fois pour quitter</string>
     <string name="get_it">Compris</string>
@@ -380,9 +380,6 @@
     <string name="settings_eh_detail_size_long">Long</string>
     <string name="settings_eh_detail_size_short">Court</string>
     <string name="settings_eh_thumb_size">Taille des mimniatures</string>
-    <string name="settings_eh_thumb_size_large">Large</string>
-    <string name="settings_eh_thumb_size_middle">Moyenne</string>
-    <string name="settings_eh_thumb_size_small">Pétite</string>
     <string name="settings_eh_thumb_resolution">Résolution des miniatures</string>
     <string name="settings_eh_thumb_resolution_summary">Auctuellement %s. Certaines résolutions spéciales êmpechent de les charger correctement.</string>
     <string name="settings_eh_thumb_resolution_auto">Auto</string>
