--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -75,7 +75,7 @@
     <string name="app_waring">이 앱의 내용은 인터넷에서 받아옵니다. 이 앱을 사용하기 위해서는 받아온 내용 중 일부가 사용자에게 가할 수 있는 신체적 또는 정신적 피해를 감수해야 합니다.</string>
     <string name="error_username_cannot_empty">사용자 이름은 비워둘 수 없습니다.</string>
     <string name="error_password_cannot_empty">비밀번호는 비워둘 수 없습니다.</string>
-    <string name="skip_signing_in">로그인 없이 사용</string>
+    <string name="tourist_mode">로그인 없이 사용</string>
     <string name="sign_in_failed">로그인 실패</string>
     <string name="press_twice_exit">한 번 더 누르면 종료됩니다.</string>
     <string name="get_it">알겠습니다</string>
@@ -335,9 +335,6 @@
     <string name="settings_eh_detail_size_long">길게</string>
     <string name="settings_eh_detail_size_short">짧게</string>
     <string name="settings_eh_thumb_size">섬네일 크기</string>
-    <string name="settings_eh_thumb_size_large">크게</string>
-    <string name="settings_eh_thumb_size_middle">중간</string>
-    <string name="settings_eh_thumb_size_small">작게</string>
     <string name="settings_eh_thumb_resolution">섬네일 해상도</string>
     <string name="settings_eh_thumb_resolution_summary">특정 해상도로 설정하면 섬네일을 불러오지 못할 수 있습니다. 현재 설정\u003a \u005b%s\u005d</string>
     <string name="settings_eh_thumb_resolution_auto">자동</string>
