--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -80,7 +80,7 @@
     <string name="app_waring">本应用中内容来自互联网，部分内容可能对您的生理及心理造成难以恢复的伤害。本应用作者不会对由本应用造成的任何后果负责。\n\n未成年人应在监护人指导下使用本应用。\n\n继续使用即代表您同意上述条款。</string>
     <string name="error_username_cannot_empty">用户名不可为空</string>
     <string name="error_password_cannot_empty">密码不可为空</string>
-    <string name="skip_signing_in">跳过登录</string>
+    <string name="tourist_mode">游客模式</string>
     <string name="sign_in_failed">登录失败</string>
     <string name="sign_in_failed_tip">若持续出错，请尝试“通过网页登录”或“通过 Cookie 登录”。</string>
     <string name="press_twice_exit">再按一次退出</string>
@@ -244,6 +244,8 @@
     <string name="comment_successfully">评论成功</string>
     <string name="comment_failed">评论失败</string>
     <string name="copy_comment_text">复制评论文字</string>
+    <string name="block_commenter">屏蔽评论者</string>
+    <string name="filter_the_commenter">屏蔽评论者“%s”？</string>
     <string name="edit_comment">修改评论</string>
     <string name="edit_comment_successfully">评论已被修改</string>
     <string name="edit_comment_failed">修改评论失败</string>
@@ -318,18 +320,20 @@
     <string name="clear_all_history">清除所有阅读历史？</string>
 
     <!-- Filter -->
-    <string name="filter">屏蔽画廊</string>
+    <string name="filter">屏蔽列表</string>
     <string name="no_filter">这里是屏蔽列表</string>
     <string name="filter_title">标题</string>
     <string name="filter_uploader">上传者</string>
     <string name="filter_tag">标签</string>
     <string name="filter_tag_namespace">标签组</string>
+    <string name="filter_commenter">评论者</string>
+    <string name="filter_comment">评论</string>
     <string name="delete_filter">删除屏蔽项“%s”？</string>
     <string name="tip">提示</string>
     <string name="add_filter">添加屏蔽项</string>
     <string name="show_definition">查看定义</string>
     <string name="filter_text">屏蔽项文本</string>
-    <string name="filter_tip">该屏蔽系统会在 EHentai 网站屏蔽系统的基础上继续屏蔽画廊。\n\n标题屏蔽项：排除标题含有该关键字的画廊。\n\n上传者屏蔽项：排除该上传者上传的画廊。\n\n标签屏蔽项：排除包含该标签的画廊，这会使获取画廊列表花费更多时间。\n\n标签组屏蔽项：排除包含该标签组的画廊，这会使获取画廊列表花费更多时间。</string>
+    <string name="filter_tip">该屏蔽系统会在 EHentai 网站屏蔽系统的基础上继续屏蔽画廊。\n\n标题屏蔽项：排除标题含有该关键字的画廊。\n\n上传者屏蔽项：排除该上传者上传的画廊。\n\n标签屏蔽项：排除包含该标签的画廊，这会使获取画廊列表花费更多时间。\n\n标签组屏蔽项：排除包含该标签组的画廊，这会使获取画廊列表花费更多时间。\n\n评论者屏蔽项：排除该评论者发布的评论。\n\n评论屏蔽项：排除匹配该正则表达式的评论。</string>
 
     <!-- Set Security -->
     <string name="set_pattern_protection">设置图案保护</string>
@@ -395,10 +399,8 @@
     <string name="settings_eh_detail_size_long">长</string>
     <string name="settings_eh_detail_size_short">短</string>
     <string name="settings_eh_list_tile_thumb_size">详情模式下缩略图大小</string>
-    <string name="settings_eh_thumb_size">缩略图大小</string>
-    <string name="settings_eh_thumb_size_large">大</string>
-    <string name="settings_eh_thumb_size_middle">中</string>
-    <string name="settings_eh_thumb_size_small">小</string>
+    <string name="settings_eh_thumb_size">缩略图模式下缩略图大小</string>
+    <string name="settings_eh_thumb_size_summary">以及画廊详情页预览图大小</string>
     <string name="settings_eh_thumb_resolution">缩略图分辨率</string>
     <string name="settings_eh_thumb_resolution_summary">%s，指定分辨率可能使获取缩略图失败</string>
     <string name="settings_eh_thumb_resolution_auto">自动</string>
@@ -413,8 +415,9 @@
     <string name="settings_eh_tag_translations_source">补充翻译（由 EhTagTranslation 提供）</string>
     <string name="settings_eh_tag_translations_source_url">https://github.com/EhTagTranslation/Editor/wiki</string>
     <string name="settings_eh_preview_num">画廊详情页预览图最大数量</string>
-    <string name="settings_eh_filter">屏蔽画廊</string>
-    <string name="settings_eh_filter_summary">根据标题、上传者、标签屏蔽画廊</string>
+    <string name="settings_eh_preview_num_summary">由于历史因素，此值过大会导致卡顿</string>
+    <string name="settings_eh_filter">屏蔽列表</string>
+    <string name="settings_eh_filter_summary">根据标题、上传者、标签、评论者屏蔽画廊或评论</string>
     <string name="settings_eh_request_news">启动时请求新闻页面</string>
     <string name="settings_eh_hide_hv_events">隐藏 HV 事件通知</string>
 
@@ -533,6 +536,7 @@
     <string name="proxy_invalid_port">无效的端口</string>
 
     <string name="cant_read_the_file">无法读取文件</string>
+    <string name="db_version_too_high">数据库版本过高</string>
 
     <string name="app_language_system">系统语言（默认）</string>
 
@@ -625,7 +629,6 @@
     <string name="tag_vote_successfully">投票成功</string>
     <string name="from_clipboard">从剪贴板导入</string>
     <string name="from_clipboard_error">未在剪贴板中发现 Cookies。</string>
-    <string name="delete_search_history">从搜索记录中删除“%s”？</string>
     <string name="read_theme">色彩主题</string>
     <string name="follow_app">跟随应用</string>
     <string name="action_add_tag">添加标签</string>
