--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -72,7 +72,7 @@
     <string name="error_cant_create_temp_file">无法创建临时文件</string>
     <string name="error_cant_save_image">无法保存图片</string>
     <string name="error_invalid_number">非法数字</string>
-    <string name="error_please_login_first">请先登陆</string>
+    <string name="error_please_login_first">请先登录</string>
     <string name="error_empty_html">页面内容为空</string>
 
     <string name="kokomade_tip">设置->Eh->画廊站点->e-hentai</string>
@@ -121,6 +121,8 @@
     <string name="search_sr">最低评分：</string>
     <string name="search_sp">页数：</string>
     <string name="search_sp_to">到</string>
+    <string name="search_sp_err1">页数最大值至少为 10</string>
+    <string name="search_sp_err2">页数范围差至少为 20</string>
     <string name="search_sf">禁用排除项：</string>
     <string name="search_sfl">语言</string>
     <string name="search_sfu">上传者</string>
